--- a/history/index.html
+++ b/history/index.html
@@ -35,20 +35,19 @@
 
 		<meta http-equiv="content-security-policy" content=""><title>History | JW Guitar Tabs</title><meta name="description" content="See songs you&#39;ve recently visited or played in this website." data-svelte="svelte-p7l4te">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/vendor-77f1925a.css">
-	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/Layout-d27e5246.css">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-6262d75b.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/vendor-3246f839.js">
+	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/pages/__layout.svelte-5de5aa78.css">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-eb27c75f.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/vendor-5a809be3.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/preload-helper-b1059d52.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/paths-4b3c6e7e.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-d4f3000a.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/stores-77c886c2.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/helperFunctions-d39dba89.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/Layout-2a88ddcc.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-99b86fed.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/stores-61082ddf.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/helperFunctions-1e4112a4.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/navigation-bd39ff07.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/NewTabLink-9a062e2a.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/history.svelte-b2c58462.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/MetaHead-e99e50b4.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/NewTabLink-5a98e2fe.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/history.svelte-828fccb9.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/MetaHead-8b08f276.js">
 	</head>
 
 	<body>
@@ -149,7 +148,7 @@
 
 
 		<script type="module" data-hydrate="xsfycs">
-		import { start } from "/jw-guitar-tabs/internal/start-6262d75b.js";
+		import { start } from "/jw-guitar-tabs/internal/start-eb27c75f.js";
 		start({
 			target: document.querySelector('[data-hydrate="xsfycs"]').parentNode,
 			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
@@ -161,8 +160,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/jw-guitar-tabs/internal/pages/__layout.svelte-d4f3000a.js"),
-						import("/jw-guitar-tabs/internal/pages/history.svelte-b2c58462.js")
+					import("/jw-guitar-tabs/internal/pages/__layout.svelte-99b86fed.js"),
+						import("/jw-guitar-tabs/internal/pages/history.svelte-828fccb9.js")
 				],
 				url: new URL("http://sveltekit-prerender/jw-guitar-tabs/history"),
 				params: {}
