--- a/index.html
+++ b/index.html
@@ -35,21 +35,20 @@
 
 		<meta http-equiv="content-security-policy" content=""><title>Home | JW Guitar Tabs</title><meta name="description" content="JW Guitar Tabs is a website where people who love our JW songs can\nenjoy playing the simplest tabs on their guitar." data-svelte="svelte-p7l4te">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/vendor-77f1925a.css">
-	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/Layout-d27e5246.css">
+	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/pages/__layout.svelte-5de5aa78.css">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/assets/pages/index.svelte-be2c93a6.css">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-6262d75b.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/vendor-3246f839.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/start-eb27c75f.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/vendor-5a809be3.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/preload-helper-b1059d52.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/paths-4b3c6e7e.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/singletons-a6a7384f.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-d4f3000a.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/stores-77c886c2.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/helperFunctions-d39dba89.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/Layout-2a88ddcc.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/__layout.svelte-99b86fed.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/stores-61082ddf.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/helperFunctions-1e4112a4.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/navigation-bd39ff07.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/NewTabLink-9a062e2a.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/index.svelte-ece1695d.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/MetaHead-e99e50b4.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/NewTabLink-5a98e2fe.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/pages/index.svelte-47df6f47.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/chunks/MetaHead-8b08f276.js">
 	</head>
 
 	<body>
@@ -164,7 +163,7 @@
 
 
 		<script type="module" data-hydrate="1344qoi">
-		import { start } from "/jw-guitar-tabs/internal/start-6262d75b.js";
+		import { start } from "/jw-guitar-tabs/internal/start-eb27c75f.js";
 		start({
 			target: document.querySelector('[data-hydrate="1344qoi"]').parentNode,
 			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
@@ -176,8 +175,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/jw-guitar-tabs/internal/pages/__layout.svelte-d4f3000a.js"),
-						import("/jw-guitar-tabs/internal/pages/index.svelte-ece1695d.js")
+					import("/jw-guitar-tabs/internal/pages/__layout.svelte-99b86fed.js"),
+						import("/jw-guitar-tabs/internal/pages/index.svelte-47df6f47.js")
 				],
 				url: new URL("http://sveltekit-prerender/jw-guitar-tabs"),
 				params: {}
