Package updates and package bugs fixes.

--- a/src/app.html
+++ b/src/app.html
@@ -33,11 +33,11 @@
 			gtag('config', 'G-ML9P4CWX19');
 		</script>
 
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 
 	<body>
-		<div id="svelte">%svelte.body%</div>
+		<div id="svelte">%sveltekit.body%</div>
 		<script
 			src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"
 			crossorigin="anonymous"
