--- a/history/index.html
+++ b/history/index.html
@@ -37,20 +37,20 @@
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/immutable/assets/Layout-2280ab10.css">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/immutable/assets/pages/history.svelte-e51ba777.css">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/immutable/assets/TitleItem-567ad040.css">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/start-e72fcf8c.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/start-9c3d6164.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/index-d0243fdd.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/index-e0ca695e.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/paths-396f020f.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/preload-helper-0cbf6bab.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/singletons-d1fb5791.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/pages/__layout.svelte-a901cf3c.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/pages/__layout.svelte-59d14f3f.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/stores-32bb370d.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/helperFunctions-688329b2.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/Layout-5cd2ccf2.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/Layout-30b7e054.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/classAdderBuilder-f411ee8a.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/navigation-0e6511d1.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/NewTabLink-8d168707.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/pages/history.svelte-14dbadc8.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/pages/history.svelte-0c30fef7.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/MetaHead-03611795.js">
 	</head>
 
@@ -145,16 +145,16 @@
   close</button>
 </div></div>
 </aside>
-<p class="footer svelte-nmkwa5"><a href="/jw-guitar-tabs/copyright">Copyright</a> © 2022 |
-	<a href="/jw-guitar-tabs/copyright">Terms of Use</a> | JW Guitar Tabs |
+<p class="footer svelte-nmkwa5"><a sveltekit:prefetch href="/jw-guitar-tabs/copyright">Copyright</a> © 2022 |
+	<a sveltekit:prefetch href="/jw-guitar-tabs/copyright">Terms of Use</a> | JW Guitar Tabs |
 	<a href="https://zeddrix.com/" target="_blank" rel="noreferrer">BeAmaZedd</a>
 </p>
 
 
-		<script type="module" data-sveltekit-hydrate="xsfycs">
-		import { start } from "/jw-guitar-tabs/internal/immutable/start-e72fcf8c.js";
+		<script type="module" data-sveltekit-hydrate="1lj9vcc">
+		import { start } from "/jw-guitar-tabs/internal/immutable/start-9c3d6164.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="xsfycs"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="1lj9vcc"]').parentNode,
 			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
 			session: {},
 			route: true,
