--- a/about/index.html
+++ b/about/index.html
@@ -36,16 +36,16 @@
 		<meta http-equiv="content-security-policy" content=""><title>About | JW Guitar Tabs</title><meta name="description" content="Learn more about the purpose of JW Guitar Tabs and how you can contribute/support this project." data-svelte="svelte-p7l4te">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/immutable/assets/Layout-2280ab10.css">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/immutable/assets/pages/about.svelte-41e52dde.css">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/start-e72fcf8c.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/start-9c3d6164.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/index-d0243fdd.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/index-e0ca695e.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/paths-396f020f.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/preload-helper-0cbf6bab.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/singletons-d1fb5791.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/pages/__layout.svelte-a901cf3c.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/pages/__layout.svelte-59d14f3f.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/stores-32bb370d.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/helperFunctions-688329b2.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/Layout-5cd2ccf2.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/Layout-30b7e054.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/classAdderBuilder-f411ee8a.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/navigation-0e6511d1.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/NewTabLink-8d168707.js">
@@ -189,16 +189,16 @@
   close</button>
 </div></div>
 </aside>
-<p class="footer svelte-nmkwa5"><a href="/jw-guitar-tabs/copyright">Copyright</a> © 2022 |
-	<a href="/jw-guitar-tabs/copyright">Terms of Use</a> | JW Guitar Tabs |
+<p class="footer svelte-nmkwa5"><a sveltekit:prefetch href="/jw-guitar-tabs/copyright">Copyright</a> © 2022 |
+	<a sveltekit:prefetch href="/jw-guitar-tabs/copyright">Terms of Use</a> | JW Guitar Tabs |
 	<a href="https://zeddrix.com/" target="_blank" rel="noreferrer">BeAmaZedd</a>
 </p>
 
 
-		<script type="module" data-sveltekit-hydrate="qrusqs">
-		import { start } from "/jw-guitar-tabs/internal/immutable/start-e72fcf8c.js";
+		<script type="module" data-sveltekit-hydrate="1xjg9j8">
+		import { start } from "/jw-guitar-tabs/internal/immutable/start-9c3d6164.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="qrusqs"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="1xjg9j8"]').parentNode,
 			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
 			session: {},
 			route: true,
