--- a/settings/index.html
+++ b/settings/index.html
@@ -36,20 +36,20 @@
 		<meta http-equiv="content-security-policy" content=""><title>Settings | JW Guitar Tabs</title><meta name="description" content="Customize these settings to have the feel and look you want for this website!" data-svelte="svelte-p7l4te">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/immutable/assets/Layout-2280ab10.css">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/immutable/assets/pages/settings.svelte-ba855c49.css">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/start-e72fcf8c.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/start-9c3d6164.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/index-d0243fdd.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/index-e0ca695e.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/paths-396f020f.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/preload-helper-0cbf6bab.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/singletons-d1fb5791.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/pages/__layout.svelte-a901cf3c.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/pages/__layout.svelte-59d14f3f.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/stores-32bb370d.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/helperFunctions-688329b2.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/Layout-5cd2ccf2.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/Layout-30b7e054.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/classAdderBuilder-f411ee8a.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/navigation-0e6511d1.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/NewTabLink-8d168707.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/pages/settings.svelte-2dd7a407.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/pages/settings.svelte-f52f874d.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/MetaHead-03611795.js">
 	</head>
 
@@ -137,7 +137,7 @@
 
 <h1>Settings</h1>
 
-HELLO WO
+HELLO W
 
 <div class="svelte-350qv4"><div class="svelte-350qv4"><h3 class="svelte-350qv4">Coming soon! :)</h3>
 		<p style="color: grey;">&quot;I will show a waiting attitude.&quot;—Mic. 7:7.</p></div>
@@ -147,16 +147,16 @@ HELLO WO
   close</button>
 </div></div>
 </aside>
-<p class="footer svelte-nmkwa5"><a href="/jw-guitar-tabs/copyright">Copyright</a> © 2022 |
-	<a href="/jw-guitar-tabs/copyright">Terms of Use</a> | JW Guitar Tabs |
+<p class="footer svelte-nmkwa5"><a sveltekit:prefetch href="/jw-guitar-tabs/copyright">Copyright</a> © 2022 |
+	<a sveltekit:prefetch href="/jw-guitar-tabs/copyright">Terms of Use</a> | JW Guitar Tabs |
 	<a href="https://zeddrix.com/" target="_blank" rel="noreferrer">BeAmaZedd</a>
 </p>
 
 
-		<script type="module" data-sveltekit-hydrate="15hnyib">
-		import { start } from "/jw-guitar-tabs/internal/immutable/start-e72fcf8c.js";
+		<script type="module" data-sveltekit-hydrate="1unl5rw">
+		import { start } from "/jw-guitar-tabs/internal/immutable/start-9c3d6164.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="15hnyib"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="1unl5rw"]').parentNode,
 			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
 			session: {},
 			route: true,
