--- a/settings/index.html
+++ b/settings/index.html
@@ -36,7 +36,7 @@
 		<meta http-equiv="content-security-policy" content=""><title>Settings | JW Guitar Tabs</title><meta name="description" content="Customize these settings to have the feel and look you want for this website!" data-svelte="svelte-p7l4te">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/immutable/assets/Layout-2280ab10.css">
 	<link rel="stylesheet" href="/jw-guitar-tabs/internal/immutable/assets/pages/settings.svelte-ba855c49.css">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/start-95c01334.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/start-5b791d77.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/index-d0243fdd.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/index-e0ca695e.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/paths-396f020f.js">
@@ -49,7 +49,7 @@
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/classAdderBuilder-f411ee8a.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/navigation-0e6511d1.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/NewTabLink-8d168707.js">
-	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/pages/settings.svelte-969a4b82.js">
+	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/pages/settings.svelte-ec4b2c20.js">
 	<link rel="modulepreload" href="/jw-guitar-tabs/internal/immutable/chunks/MetaHead-03611795.js">
 	</head>
 
@@ -137,8 +137,6 @@
 
 <h1>Settings</h1>
 
-HELLO WORKING
-
 <div class="svelte-350qv4"><div class="svelte-350qv4"><h3 class="svelte-350qv4">Coming soon! :)</h3>
 		<p style="color: grey;">&quot;I will show a waiting attitude.&quot;—Mic. 7:7.</p></div>
 </div></div>
@@ -153,10 +151,10 @@ HELLO WORKING
 </p>
 
 
-		<script type="module" data-sveltekit-hydrate="737kyy">
-		import { start } from "/jw-guitar-tabs/internal/immutable/start-95c01334.js";
+		<script type="module" data-sveltekit-hydrate="7sgdqh">
+		import { start } from "/jw-guitar-tabs/internal/immutable/start-5b791d77.js";
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="737kyy"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="7sgdqh"]').parentNode,
 			paths: {"base":"/jw-guitar-tabs","assets":"/jw-guitar-tabs"},
 			session: {},
 			route: true,
